--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@
 *.pydevproject
 .project
 .metadata
-bin/
-tmp/
-obj/
-ppo/
-datos/
+[Bb]in/
+[Tt]mp/
+[Oo]bj/
+[Pp]po/
+[Dd]atos/
 *.tmp
 *.bak
 *.swp
