--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6,7 +6,7 @@
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-GESTOOL ICON "..\Bmp\Gestool.ico"
+GESTOOL ICON "..\\Bmp\\Gestool.ico"
 
 BIENVENIDOS DIALOG DISCARDABLE 6, 15, 504, 268
 STYLE WS_POPUP|DS_MODALFRAME|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
@@ -19036,7 +19036,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 16, 424, 200
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 71, 2, 67, 11
   CONTROL "Fecha documento", -1, "Static", WS_GROUP, 2, 5, 63, 8
-  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 430, 2, 91, 214
+  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_TABSTOP, 429, 2, 91, 214
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
