Avances en Facturas automaticas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15465,18 +15465,18 @@ FONT 8, "MS Sans Serif"
   CONTROL "Impuestos", -1, "Static", WS_GROUP, 8, 50, 23, 8
 }
 
-ASSDOCAUTO DIALOG DISCARDABLE -157, -139, 567, 295
+ASSDOCAUTO DIALOG DISCARDABLE -157, -139, 567, 315
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Asistente creación documentos automáticos"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "TMeter", 120, "TMeter", 0x00000000, 40, 269, 508, 5
-  CONTROL "Iniciar", 500, "Button", WS_TABSTOP, 390, 276, 50, 14
-  CONTROL "Salir", 550, "Button", WS_TABSTOP, 444, 276, 50, 14
-  CONTROL "Ver resultado", 600, "Button", WS_TABSTOP, 497, 276, 50, 14
+  CONTROL "TMeter", 120, "TMeter", 0x00000000, 40, 289, 523, 5
+  CONTROL "Iniciar", 500, "Button", WS_TABSTOP, 406, 296, 50, 14
+  CONTROL "Salir", 550, "Button", WS_TABSTOP, 460, 296, 50, 14
+  CONTROL "Ver resultado", 600, "Button", WS_TABSTOP, 513, 296, 50, 14
   CONTROL "", 900, "TBitmap", 0x0000020e, 4, 3, 34, 30, 0x00000020
   CONTROL "Creación de documentos automáticos", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 124, 8
-  CONTROL "", 400, "SysTabControl32", 0x00000000, 40, 33, 525, 233
+  CONTROL "", 400, "SysTabControl32", 0x00000000, 40, 33, 525, 253
 }
 
 RECIBOS DIALOG DISCARDABLE 278, 96, 347, 307
@@ -19029,14 +19029,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP|0x00200000, 2, 2, 517, 184
 }
 
-ASSDOCAUTO_2 DIALOG DISCARDABLE 36, 16, 524, 219
+ASSDOCAUTO_2 DIALOG DISCARDABLE 36, 16, 524, 233
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 16, 424, 200
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 16, 424, 216
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 71, 2, 67, 11
   CONTROL "Fecha documento", -1, "Static", WS_GROUP, 2, 5, 63, 8
-  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_TABSTOP, 429, 2, 91, 214
+  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_TABSTOP, 429, 16, 91, 216
+  CONTROL "", 120, "TBitmap", 0x00000000, 429, 4, 14, 11
+  CONTROL "", 130, "TBitmap", 0x00000000, 445, 4, 14, 11
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
