--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19022,23 +19022,23 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-ASSDOCAUTO_1 DIALOG DISCARDABLE 36, 16, 523, 203
+ASSDOCAUTO_1 DIALOG DISCARDABLE 36, 16, 523, 238
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP|0x00200000, 2, 2, 517, 184
+  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP|0x00200000, 2, 2, 517, 234
 }
 
-ASSDOCAUTO_2 DIALOG DISCARDABLE 36, 16, 524, 233
+ASSDOCAUTO_2 DIALOG DISCARDABLE 36, 16, 524, 238
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 16, 424, 216
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 16, 424, 219
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 71, 2, 67, 11
   CONTROL "Fecha documento", -1, "Static", WS_GROUP, 2, 5, 63, 8
-  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_TABSTOP, 429, 16, 91, 216
-  CONTROL "", 120, "TBitmap", 0x00000000, 429, 4, 14, 11
-  CONTROL "", 130, "TBitmap", 0x00000000, 445, 4, 14, 11
+  CONTROL "", 500, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_TRACKSELECT|TVS_SINGLEEXPAND|TVS_INFOTIP|TVS_FULLROWSELECT|WS_TABSTOP, 429, 16, 91, 218
+  CONTROL "", 120, "TBitmap", 0x00000000, 429, 2, 14, 11
+  CONTROL "Incluir ya generados", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 446, 3, 77, 10
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
