--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4818,7 +4818,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Clientes y obras", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 205, 300, 85
 }
 
-PROP DIALOG DISCARDABLE 70, 20, 268, 280
+PROP DIALOG DISCARDABLE 70, 20, 268, 300
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Propiedades"
 FONT 8, "Helv"
@@ -4826,23 +4826,25 @@ FONT 8, "Helv"
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 12, 60, 12
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 50, 26, 210, 12
   CONTROL "Propiedad de tipo color", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 10, 43, 88, 10
-  CONTROL "Publicar en internet", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 10, 70, 88, 10
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 50, 81, 210, 12
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 10, 113, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 65, 113, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 120, 113, 50, 14
-  CONTROL "", 120, "TXBrowse", WS_TABSTOP|0x00300000, 10, 127, 251, 125
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 106, 264, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 161, 264, 50, 14
-  CONTROL "&Ayuda", 559, "Button", WS_TABSTOP, 216, 264, 50, 14
-  CONTROL "Propiedad", -1, "Button", BS_GROUPBOX, 2, 3, 264, 55
-  CONTROL "Tabla de propiedades", -1, "Button", BS_GROUPBOX, 2, 102, 264, 158
+  CONTROL "Publicar en internet", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 10, 84, 88, 10
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 50, 95, 210, 12
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 10, 126, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 65, 126, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 120, 126, 50, 14
+  CONTROL "", 120, "TXBrowse", WS_TABSTOP|0x00300000, 10, 142, 251, 125
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 106, 277, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 161, 277, 50, 14
+  CONTROL "&Ayuda", 559, "Button", WS_TABSTOP, 216, 277, 50, 14
+  CONTROL "Propiedad", -1, "Button", BS_GROUPBOX, 2, 3, 264, 68
+  CONTROL "Tabla de propiedades", -1, "Button", BS_GROUPBOX, 2, 115, 264, 158
   CONTROL "Código", -1, "Static", WS_GROUP, 10, 16, 30, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 10, 30, 30, 8
-  CONTROL "Bajar", 504, "Button", WS_TABSTOP, 227, 113, 34, 14
-  CONTROL "Subir", 503, "Button", WS_TABSTOP, 192, 113, 34, 14
-  CONTROL "Comercio electrónico", -1, "Button", BS_GROUPBOX, 1, 59, 264, 39
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 10, 85, 38, 8
+  CONTROL "Bajar", 504, "Button", WS_TABSTOP, 227, 126, 34, 14
+  CONTROL "Subir", 503, "Button", WS_TABSTOP, 192, 126, 34, 14
+  CONTROL "Comercio electrónico", -1, "Button", BS_GROUPBOX, 2, 73, 264, 39
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 10, 99, 38, 8
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 50, 55, 85, 12
+  CONTROL "Externo", -1, "Static", WS_GROUP, 10, 59, 30, 8
 }
 
 PROVEEDOR DIALOG DISCARDABLE 120, -71, 504, 306
