--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -6,17 +6,18 @@
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-WELSERTACTIL DIALOG DISCARDABLE 113, 122, 536, 318
+BienvenidosTactil DIALOG DISCARDABLE 113, 122, 536, 318
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 483, 262, 50, 38
-  CONTROL "", 100, "SysListView32", LVS_SINGLESEL|LVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP, 186, 6, 347, 253
+  CONTROL "", 100, "SysListView32", LVS_SINGLESEL|LVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP, 185, 2, 348, 256
   CONTROL "Database engine", 210, "Static", WS_GROUP, 39, 282, 300, 10, WS_EX_TRANSPARENT
   CONTROL "", 200, "Static", SS_BITMAP|SS_CENTERIMAGE, 2, 270, 34, 30
   CONTROL "", 240, "msctls_progress32", 0x00000000, 0, 310, 536, 4
   CONTROL "Versión: ", 220, "Static", WS_GROUP, 39, 270, 300, 10, WS_EX_TRANSPARENT
   CONTROL "", 160, "Static", WS_GROUP, 39, 294, 300, 10
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 2, 2, 156, 224
 }
 
 KEYB DIALOG DISCARDABLE 6, 18, 162, 75
@@ -2258,3 +2259,4 @@ FONT 8, "MS Sans Serif"
   CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 228, 218, 34, 30
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 44, 29, 217, 186
 }
+
