--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1889,7 +1889,7 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_THICKFRAME|WS_CAPTION|WS_SYSMENU|WS_MA
 CAPTION "TPV TACTIL"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 1, 81, 220, 219
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 1, 103, 220, 197
   CONTROL "TOTAL", 410, "Static", WS_BORDER|WS_GROUP, -242, -25, 112, 23
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
@@ -1915,7 +1915,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 120, "Button", WS_TABSTOP, 1, 379, 42, 36
   CONTROL "", 121, "Button", WS_TABSTOP, 44, 379, 42, 36
   CONTROL "", 122, "Button", WS_TABSTOP, 179, 379, 42, 36
-  CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00800000, 505, 81, 170, 267
+  CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00800000, 505, 76, 170, 272
   CONTROL "", 302, "Button", WS_TABSTOP, 505, 379, 42, 36
   CONTROL "", 303, "Button", WS_TABSTOP, 548, 379, 42, 36
   CONTROL "Total", 210, "Static", WS_GROUP|WS_TABSTOP, 1, 303, 129, 25
@@ -1923,13 +1923,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 260, "Static", SS_RIGHT|WS_GROUP, 1, 328, 220, 11
   CONTROL "Zona", 270, "Static", WS_GROUP, 1, 341, 220, 16
   CONTROL "", 280, "Static", WS_GROUP, 1, 357, 220, 16
-  CONTROL "", 200, "C5ImageView", WS_TABSTOP|0x00800000, 223, 81, 281, 296
+  CONTROL "", 200, "C5ImageView", WS_TABSTOP|0x00800000, 223, 76, 281, 301
   CONTROL "", 500, "Button", WS_TABSTOP, 223, 379, 42, 36
   CONTROL "", 501, "Button", WS_TABSTOP, 265, 379, 42, 36
   CONTROL "", 502, "Button", WS_TABSTOP, 376, 379, 42, 36
   CONTROL "", 504, "Button", WS_TABSTOP, 462, 379, 42, 36
   CONTROL "", 123, "Button", WS_TABSTOP, 136, 379, 42, 36
   CONTROL "", 124, "Button", WS_TABSTOP, 87, 379, 42, 36
+  CONTROL "", 220, "SysTabControl32", 0x00000000, 1, 76, 220, 28
 }
 
 TPV_LISTA_TICKET_1280X752 DIALOG DISCARDABLE 4, 47, 548, 255
@@ -2258,3 +2259,4 @@ FONT 8, "MS Sans Serif"
   CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 228, 218, 34, 30
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 44, 29, 217, 186
 }
+
