Error en calculo de ofertas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19088,3 +19088,23 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 238, 159, 50, 14
 }
 
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+REINDEXADS DIALOG DISCARDABLE 92, 84, 386, 228
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_VISIBLE
+CAPTION "Regeneración de índices"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Ficheros de sistema", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 44, 75, 10
+  CONTROL "Ficheros empresa", 101, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 66, 75, 10
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 224, 206, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 279, 206, 50, 14
+  CONTROL "A&yuda", 998, "Button", WS_TABSTOP, 334, 206, 50, 14
+  CONTROL "Proceso en curso", -1, "Button", BS_GROUPBOX, 2, 176, 382, 22
+  CONTROL "", 110, "Static", SS_CENTER|WS_GROUP, 4, 187, 378, 8
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 386, 34
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 386, 1
+  CONTROL "", 200, "msctls_progress32", 0x00000000, 4, 56, 378, 4
+  CONTROL "", 210, "msctls_progress32", 0x00000000, 4, 78, 378, 4
+}
+
