Contadores por delegaciones (inicio) reporting tabla de direcciones

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14301,30 +14301,30 @@ EMPRESA_10 DIALOG DISCARDABLE 68, -86, 432, 353
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_NOSCROLL|WS_BORDER|WS_TABSTOP, 50, 40, 111, 306
-  CONTROL "", 150, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 229, 41, 36, 11
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 173, 65, 118, 143
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 229, 80, 62, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 229, 93, 40, 11
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 270, 93, 151, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 229, 106, 62, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 230, 134, 191, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 230, 147, 62, 11
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 231, 177, 191, 11
-  CONTROL "Contador", 122, "Static", WS_GROUP, 174, 83, 34, 8
-  CONTROL "Documento", 132, "Static", WS_GROUP, 174, 96, 42, 8
-  CONTROL "Número copias", 141, "Static", WS_GROUP, 174, 109, 53, 8
-  CONTROL "Documentos", -1, "Button", BS_GROUPBOX, 44, 29, 120, 320
-  CONTROL "Serie defecto", 151, "Static", WS_GROUP, 174, 44, 47, 8
-  CONTROL "Propiedades del documento", 152, "Button", BS_GROUPBOX, 167, 29, 258, 93
-  CONTROL "NFC", 180, "Button", BS_GROUPBOX, 168, 124, 257, 39
-  CONTROL "Prefijo NFC", 161, "Static", WS_GROUP, 174, 137, 41, 8
-  CONTROL "Contador NFC", 171, "Static", WS_GROUP, 174, 150, 50, 8
+  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|WS_VSCROLL|WS_TABSTOP, 50, 40, 134, 143
+  CONTROL "", 150, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 71, 36, 11
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 107, 98, 40, 143
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 125, 76, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 108, 138, 40, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 149, 138, 151, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 151, 62, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 108, 165, 191, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 108, 178, 62, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 108, 219, 309, 11
+  CONTROL "Contador", 122, "Static", WS_GROUP, 50, 128, 34, 8
+  CONTROL "Documento", 132, "Static", WS_GROUP, 50, 141, 42, 8
+  CONTROL "Número copias", 141, "Static", WS_GROUP, 50, 154, 53, 8
+  CONTROL "Serie defecto", 151, "Static", WS_GROUP, 50, 74, 47, 8
+  CONTROL "Propiedades del documento", 152, "Button", BS_GROUPBOX, 44, 59, 381, 26
+  CONTROL "Prefijo NFC", 161, "Static", WS_GROUP, 50, 168, 41, 8
+  CONTROL "Contador NFC", 171, "Static", WS_GROUP, 50, 181, 50, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Contadores y documentos ", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 175, 58, 246, 1
-  CONTROL "Plantilla para mailing", -1, "Button", BS_GROUPBOX, 168, 165, 257, 28
-  CONTROL "Archivo", -1, "Static", WS_GROUP, 174, 180, 29, 8
+  CONTROL "Plantilla para mailing", -1, "Button", BS_GROUPBOX, 44, 207, 380, 28
+  CONTROL "Archivo", -1, "Static", WS_GROUP, 50, 222, 29, 8
+  CONTROL "Tipo de documento", -1, "Button", BS_GROUPBOX, 44, 29, 380, 28
+  CONTROL "Propiedades de la serie", -1, "Button", BS_GROUPBOX, 43, 87, 381, 115
+  CONTROL "Serie", -1, "Static", WS_GROUP, 50, 100, 34, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
