--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -6,7 +6,7 @@
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-BienvenidosTactil DIALOG DISCARDABLE 113, 122, 536, 318
+BIENVENIDOSTACTIL DIALOG DISCARDABLE 113, 122, 536, 318
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
@@ -2259,5 +2259,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 130, "Button", WS_TABSTOP, 78, 218, 34, 30
   CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 228, 218, 34, 30
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 44, 29, 217, 186
+}
+
+DIVIDIR_MESAS DIALOG DISCARDABLE -9, -141, 593, 517
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Dividir mesas"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Ticket pendiente", 230, "Button", BS_GROUPBOX, 2, 82, 267, 393
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 8, 98, 256, 372
+  CONTROL "Nuevo ticket", 240, "Button", BS_GROUPBOX, 321, 82, 269, 393
+  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00800000, 328, 98, 256, 372
+  CONTROL "", 210, "Button", WS_TABSTOP, 274, 183, 42, 36
+  CONTROL "", 220, "Button", WS_TABSTOP, 274, 260, 42, 36
+  CONTROL "", 260, "Button", WS_TABSTOP, 53, 478, 42, 36
+  CONTROL "", 250, "Button", WS_TABSTOP, 7, 478, 42, 36
+  CONTROL "", 280, "Button", WS_TABSTOP, 373, 478, 42, 36
+  CONTROL "", 270, "Button", WS_TABSTOP, 327, 478, 42, 36
 }
 
