Informe de Lotes y continuamos con los timers de scripts

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18961,21 +18961,23 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-SCRIPTS DIALOG DISCARDABLE 62, -23, 575, 356
+SCRIPTS DIALOG DISCARDABLE 62, -23, 575, 372
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Scripts"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 65, 13, 32, 11
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 65, 13, 60, 11
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 65, 26, 501, 11
-  CONTROL "", 200, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 8, 57, 558, 271
-  CONTROL "Compilar", 500, "Button", WS_TABSTOP, 415, 338, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 469, 338, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 522, 338, 50, 14
-  CONTROL "Código fuente", -1, "Button", BS_GROUPBOX, 2, 44, 569, 290
-  CONTROL "Script", -1, "Button", BS_GROUPBOX, 2, 4, 569, 39
+  CONTROL "", 120, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 65, 39, 60, 142
+  CONTROL "", 200, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 8, 70, 558, 274
+  CONTROL "Compilar", 500, "Button", WS_TABSTOP, 415, 354, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 469, 354, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 522, 354, 50, 14
+  CONTROL "Código fuente", -1, "Button", BS_GROUPBOX, 2, 58, 569, 292
+  CONTROL "Script", -1, "Button", BS_GROUPBOX, 2, 4, 569, 52
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 16, 39, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 29, 39, 8
+  CONTROL "Ejecutar cada", -1, "Static", WS_GROUP, 8, 42, 49, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
