--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1890,7 +1890,7 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_THICKFRAME|WS_CAPTION|WS_SYSMENU|WS_MA
 CAPTION "TPV TACTIL"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 1, 103, 220, 197
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 1, 76, 220, 224
   CONTROL "TOTAL", 410, "Static", WS_BORDER|WS_GROUP, -242, -25, 112, 23
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
@@ -1931,7 +1931,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 504, "Button", WS_TABSTOP, 462, 379, 42, 36
   CONTROL "", 123, "Button", WS_TABSTOP, 136, 379, 42, 36
   CONTROL "", 124, "Button", WS_TABSTOP, 87, 379, 42, 36
-  CONTROL "", 220, "SysTabControl32", 0x00000000, 1, 76, 220, 28
 }
 
 TPV_LISTA_TICKET_1280X752 DIALOG DISCARDABLE 4, 47, 548, 255
@@ -2276,5 +2275,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 250, "Button", WS_TABSTOP, 7, 478, 42, 36
   CONTROL "", 280, "Button", WS_TABSTOP, 373, 478, 42, 36
   CONTROL "", 270, "Button", WS_TABSTOP, 327, 478, 42, 36
+}
+
+TPV_LISTA_MULTIPLES DIALOG DISCARDABLE 4, 47, 377, 275
+STYLE WS_POPUP|DS_MODALFRAME|DS_SYSMODAL|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Lista de tickets"
+FONT 12, "Segoe UI"
+{
+  CONTROL "TOTAL", 410, "Static", WS_BORDER|WS_GROUP, -242, -25, 112, 23
+  CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
+  CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
+  CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00a00000, 1, 46, 375, 229
 }
 
