Nuevo registro para saas

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5158,27 +5158,39 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 130, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 32, 200, 180
 }
 
-GETSERIALNO DIALOG DISCARDABLE 130, 69, 354, 146
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_VISIBLE
+GETSERIALNO DIALOG DISCARDABLE 130, 69, 403, 239
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Sistema de protección"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "XXXXXXXXXXXXXXXXXX", 100, "Static", SS_RIGHT|SS_NOPREFIX|WS_GROUP, 245, 15, 80, 8
-  CONTROL "", 110, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 245, 25, 80, 11
-  CONTROL "&Demo", 552, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 164, 127, 50, 14
-  CONTROL "&Registrar", IDOK, "Button", WS_TABSTOP, 220, 127, 50, 14
-  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 275, 127, 50, 14
-  CONTROL "Clave de protección", 120, "Static", WS_GROUP, 140, 15, 70, 8, WS_EX_TRANSPARENT
-  CONTROL "Clave de acceso", 130, "Static", SS_NOPREFIX|WS_GROUP, 140, 28, 70, 8, WS_EX_TRANSPARENT
-  CONTROL "Para obtener las claves de acceso :", 140, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 123, 44, 119, 10
-  CONTROL "Para probar el programa", 180, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 123, 91, 81, 10
-  CONTROL "1.- Tome la factura del programa.", 150, "Static", WS_GROUP, 140, 56, 146, 9
-  CONTROL "2.- Marque el teléfono siguiente 902.930.252", 160, "Static", WS_GROUP, 140, 67, 146, 9
-  CONTROL "3.- Comunique la clave de protección.", 170, "Static", WS_GROUP, 140, 79, 153, 9
-  CONTROL "1.- Pulse el botón DEMO para continuar", 190, "Static", WS_GROUP, 140, 103, 153, 9
-  CONTROL "", 200, "TWebBtn", 0x00000000, 2, 115, 84, 10
-  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 16, 15, 32, 29
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 90, 120, 260, 1
+  CONTROL "Licencia perpetua", 100, "Button", BS_AUTORADIOBUTTON, 43, 35, 75, 10
+  CONTROL "XXXXXXXXXXXXXXXXXX", 110, "Static", SS_RIGHT|SS_NOPREFIX|WS_GROUP, 136, 54, 80, 8
+  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 136, 64, 80, 11
+  CONTROL "Licencia por alquiler", 200, "Button", BS_AUTORADIOBUTTON, 43, 84, 78, 10
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 136, 99, 76, 11
+  CONTROL "", 220, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 136, 112, 258, 11
+  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 136, 125, 258, 11
+  CONTROL "", 240, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 136, 138, 258, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 136, 151, 76, 11
+  CONTROL "", 280, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 214, 151, 180, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 136, 165, 258, 11
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 135, 179, 76, 11
+  CONTROL "Licencia demo", 300, "Button", BS_AUTORADIOBUTTON, 43, 200, 60, 10
+  CONTROL "Si&guiente", IDOK, "Button", WS_TABSTOP, 344, 217, 50, 14
+  CONTROL "Clave de protección", 111, "Static", WS_GROUP, 62, 54, 70, 8, WS_EX_TRANSPARENT
+  CONTROL "Clave de acceso", 121, "Static", SS_NOPREFIX|WS_GROUP, 62, 67, 70, 8, WS_EX_TRANSPARENT
+  CONTROL "llame al 902.930.252", 130, "Static", SS_RIGHT|WS_GROUP, 239, 52, 155, 10
+  CONTROL "", 400, "TWebBtn", 0x00000000, 43, 219, 84, 12
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Sistema de protección de Gestool", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 43, 3, 352, 8
+  CONTROL "Nombre", 221, "Static", WS_GROUP, 62, 114, 29, 8
+  CONTROL "Domicilio", 231, "Static", WS_GROUP, 62, 128, 32, 8
+  CONTROL "Población", 241, "Static", WS_GROUP, 62, 141, 33, 8
+  CONTROL "CP y Provincia", 251, "Static", WS_GROUP, 62, 154, 51, 8
+  CONTROL "Teléfono", 271, "Static", WS_GROUP, 62, 182, 29, 8
+  CONTROL "N.I.F. / C.I.F.", 211, "Static", WS_GROUP, 62, 102, 42, 8
+  CONTROL "E-mail", 261, "Static", WS_GROUP, 62, 167, 20, 8
+  CONTROL "Podrá tener hasta 50 registros en cada base de datos", 310, "Static", SS_RIGHT|WS_GROUP, 212, 201, 182, 10
 }
 
 GENFAC_01 DIALOG DISCARDABLE 11, 16, 449, 249
@@ -11252,7 +11264,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Series", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 309, 2, 118, 194
 }
 
-IMPFACPLUS DIALOG DISCARDABLE 83, 45, 365, 354
+IMPFACPLUS DIALOG DISCARDABLE 83, 45, 365, 357
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_VISIBLE
 CAPTION "Importación de factuplus ®"
 FONT 8, "MS Sans Serif"
