--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5173,8 +5173,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 240, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 136, 138, 258, 11
   CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 136, 151, 76, 11
   CONTROL "", 280, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 214, 151, 180, 11
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 136, 165, 258, 11
-  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 135, 179, 76, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 136, 164, 258, 11
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 135, 177, 76, 11
   CONTROL "Licencia demo", 300, "Button", BS_AUTORADIOBUTTON, 43, 200, 60, 10
   CONTROL "Si&guiente", IDOK, "Button", WS_TABSTOP, 344, 217, 50, 14
   CONTROL "Clave de protección", 111, "Static", WS_GROUP, 62, 54, 70, 8, WS_EX_TRANSPARENT
@@ -5183,13 +5183,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 400, "TWebBtn", 0x00000000, 43, 219, 84, 12
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Sistema de protección de Gestool", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 43, 3, 352, 8
-  CONTROL "Nombre", 221, "Static", WS_GROUP, 62, 114, 29, 8
-  CONTROL "Domicilio", 231, "Static", WS_GROUP, 62, 128, 32, 8
-  CONTROL "Población", 241, "Static", WS_GROUP, 62, 141, 33, 8
-  CONTROL "CP y Provincia", 251, "Static", WS_GROUP, 62, 154, 51, 8
-  CONTROL "Teléfono", 271, "Static", WS_GROUP, 62, 182, 29, 8
-  CONTROL "N.I.F. / C.I.F.", 211, "Static", WS_GROUP, 62, 102, 42, 8
-  CONTROL "E-mail", 261, "Static", WS_GROUP, 62, 167, 20, 8
+  CONTROL "* Nombre", 221, "Static", WS_GROUP, 62, 114, 35, 8
+  CONTROL "* Domicilio", 231, "Static", WS_GROUP, 62, 128, 38, 8
+  CONTROL "* Población", 241, "Static", WS_GROUP, 62, 141, 41, 8
+  CONTROL "* CP y Provincia", 251, "Static", WS_GROUP, 62, 154, 56, 8
+  CONTROL "* Teléfono", 271, "Static", WS_GROUP, 62, 180, 38, 8
+  CONTROL "* N.I.F. / C.I.F.", 211, "Static", WS_GROUP, 62, 102, 51, 8
+  CONTROL "* E-mail", 261, "Static", WS_GROUP, 62, 166, 29, 8
   CONTROL "Podrá tener hasta 50 registros en cada base de datos", 310, "Static", SS_RIGHT|WS_GROUP, 212, 201, 182, 10
 }
 
