--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -42,3 +42,6 @@ navigate_left2 BITMAP "..\\bmp\\navigate_left2.bmp"
 navigate_right2 BITMAP "..\\bmp\\navigate_right2.bmp"
 document_text_printer2_32 BITMAP "..\\bmp\\document_text_printer2_32.bmp"
 note_cut_32 BITMAP "..\\bmp\\note_cut_32.bmp"
+certificate_32_alpha BITMAP "..\\bmp\\certificate_32_alpha.bmp"
+lock_32_alpha BITMAP "..\\bmp\\lock_32_alpha.bmp"
+piggy_bank_32_alpha BITMAP "..\\bmp\\piggy_bank_32_alpha.bmp"
