--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18167,6 +18167,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "Fecha\r\n", -1, "Static", WS_GROUP, 44, 58, 45, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 444, 57, 29, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 444, 69, 29, 8
+  CONTROL "", 601, "TBtnBmp", 0x00000000, 0, 103, 12, 12
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 13, 103, 12, 12
+  CONTROL "", 603, "TBtnBmp", 0x00000000, 26, 103, 12, 12
+  CONTROL "", 151, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 103, 86, 11
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
