--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -45,3 +45,5 @@ note_cut_32 BITMAP "..\\bmp\\note_cut_32.bmp"
 certificate_32_alpha BITMAP "..\\bmp\\certificate_32_alpha.bmp"
 lock_32_alpha BITMAP "..\\bmp\\lock_32_alpha.bmp"
 piggy_bank_32_alpha BITMAP "..\\bmp\\piggy_bank_32_alpha.bmp"
+power-drill_user1_16 BITMAP "..\\bmp\\power-drill_user1_16.bmp"
+power-drill_user1_32 BITMAP "..\\bmp\\power-drill_user1_32.bmp"
