--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18931,7 +18931,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 96, 103, 78, 11
   CONTROL "Imp. inc.", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 116, 51, 10
   CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 96, 114, 78, 186
-  CONTROL "", 217, "ComboBox", NOT WS_VISIBLE|WS_BORDER|CBS_DROPDOWNLIST|CBS_NOINTEGRALHEIGHT|WS_TABSTOP, 585, 15, 77, 104
+  CONTROL "", 217, "ComboBox", NOT WS_VISIBLE|WS_BORDER|CBS_DROPDOWNLIST|CBS_NOINTEGRALHEIGHT, 585, 15, 77, 104
   CONTROL "Punto verde", 409, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 462, 328, 52, 10
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 289, 160, 61
   CONTROL "Recargo de equivalencia", 406, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 462, 346, 93, 10
@@ -18983,29 +18983,23 @@ SATCLI_2 DIALOG DISCARDABLE 45, 10, 670, 375
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 39, 552, 44
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 100, 112, 72, 11
-  CONTROL "", 301, "Edit", WS_BORDER, 174, 112, 184, 11
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 100, 125, 72, 11
-  CONTROL "", 166, "Edit", WS_BORDER, 174, 125, 184, 11
-  CONTROL "", 127, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 138, 72, 11
-  CONTROL "Listo para entregar", 126, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 175, 139, 72, 10
-  CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 49, 152, 40, 10
-  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 151, 86, 11
-  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 188, 151, 50, 11
-  CONTROL "Anulado", 130, "Button", BS_AUTOCHECKBOX, 49, 165, 42, 10
-  CONTROL "", 131, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 164, 86, 11
-  CONTROL "", 132, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 188, 164, 170, 11
-  CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 420, 98, 64, 11
-  CONTROL "", 236, "Edit", WS_BORDER, 485, 98, 169, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 420, 111, 234, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 420, 124, 88, 11
-  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 420, 136, 70, 11
-  CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 124, 102, 11
-  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 136, 102, 11
-  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 148, 102, 11
-  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 192, 410, 11
-  CONTROL "", 180, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 192, 100, 11
+  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 39, 552, 57
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 100, 125, 72, 11
+  CONTROL "", 301, "Edit", WS_BORDER, 174, 125, 184, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 100, 138, 72, 11
+  CONTROL "", 166, "Edit", WS_BORDER, 174, 138, 184, 11
+  CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 49, 165, 40, 10
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 100, 164, 86, 11
+  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 188, 164, 50, 11
+  CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 420, 111, 64, 11
+  CONTROL "", 236, "Edit", WS_BORDER, 485, 111, 169, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 420, 124, 234, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 420, 137, 88, 11
+  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 420, 149, 70, 11
+  CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 137, 102, 11
+  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 149, 102, 11
+  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 161, 102, 11
+  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 192, 552, 11
   CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 205, 552, 46
   CONTROL "&Añadir [F2]", 500, "Button", WS_TABSTOP, 49, 269, 50, 14
   CONTROL "&Modificar [F3]", 510, "Button", WS_TABSTOP, 49, 284, 50, 14
@@ -19013,16 +19007,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "Previsualizar", 600, "Button", WS_TABSTOP, 49, 314, 50, 14
   CONTROL "Imprimir", 610, "Button", WS_TABSTOP, 49, 329, 50, 14
   CONTROL "", 530, "TXBrowse", 0x00200000, 100, 269, 409, 100
-  CONTROL "Transport.", -1, "Static", WS_GROUP, 378, 101, 40, 8
-  CONTROL "Caja", -1, "Static", WS_GROUP, 49, 128, 34, 8
-  CONTROL "Retirado por", -1, "Static", WS_GROUP, 378, 114, 40, 8
-  CONTROL "Prevista", -1, "Static", WS_GROUP, 49, 140, 27, 8
+  CONTROL "Transport.", -1, "Static", WS_GROUP, 378, 114, 40, 8
+  CONTROL "Caja", -1, "Static", WS_GROUP, 49, 141, 34, 8
+  CONTROL "Retirado por", -1, "Static", WS_GROUP, 378, 127, 40, 8
   CONTROL "Condición", -1, "Static", WS_GROUP, 49, 195, 40, 8
   CONTROL "Comentarios", -1, "Static", WS_GROUP, 49, 206, 42, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 89, 319, 90
+  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 102, 319, 76
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 181, 616, 74
-  CONTROL "Matrícula", -1, "Static", WS_GROUP, 378, 127, 40, 8
-  CONTROL "Bultos", -1, "Static", WS_GROUP, 378, 139, 40, 8
+  CONTROL "Matrícula", -1, "Static", WS_GROUP, 378, 140, 40, 8
+  CONTROL "Bultos", -1, "Static", WS_GROUP, 378, 152, 40, 8
   CONTROL "Entregas a cuenta", -1, "Button", BS_GROUPBOX, 44, 258, 471, 115
   CONTROL "", -1, "Button", BS_GROUPBOX, 522, 258, 138, 86
   CONTROL "Total pedido", -1, "Static", WS_GROUP, 529, 269, 44, 8
@@ -19031,18 +19024,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 550, "Static", SS_RIGHT|WS_GROUP, 602, 283, 50, 8
   CONTROL "Diferencia", -1, "Static", WS_GROUP, 529, 357, 44, 8
   CONTROL "0", 560, "Static", SS_RIGHT|WS_GROUP, 602, 357, 50, 8
-  CONTROL "Delegación", -1, "Static", WS_GROUP, 49, 115, 39, 8
-  CONTROL "Su pedido", -1, "Static", WS_GROUP, 513, 195, 34, 8
-  CONTROL "Lógistica", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 372, 89, 288, 90
-  CONTROL "Total peso", -1, "Static", WS_GROUP, 513, 139, 38, 8
-  CONTROL "TARA", -1, "Static", WS_GROUP, 513, 127, 38, 8
-  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 513, 151, 38, 8
+  CONTROL "Delegación", -1, "Static", WS_GROUP, 49, 128, 39, 8
+  CONTROL "Lógistica", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 372, 102, 288, 76
+  CONTROL "Total peso", -1, "Static", WS_GROUP, 513, 152, 38, 8
+  CONTROL "TARA", -1, "Static", WS_GROUP, 513, 140, 38, 8
+  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 513, 164, 38, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 522, 346, 138, 27
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "S.A.T. clientes", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "", 115, "Edit", WS_BORDER|WS_TABSTOP, 100, 99, 72, 11
-  CONTROL "", 116, "Edit", WS_BORDER, 174, 99, 184, 11
-  CONTROL "Usuario", -1, "Static", WS_GROUP, 49, 102, 46, 8
-  CONTROL "Averias", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 616, 57
+  CONTROL "", 115, "Edit", WS_BORDER|WS_TABSTOP, 100, 112, 72, 11
+  CONTROL "", 116, "Edit", WS_BORDER, 174, 112, 184, 11
+  CONTROL "Usuario", -1, "Static", WS_GROUP, 49, 115, 46, 8
+  CONTROL "Averia", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 616, 70
 }
 
