--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6399,7 +6399,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Agrupando albaranes", 503, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 92, 23, 546, 8
   CONTROL "Dirección :", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 13, 47, 8
   CONTROL "Cliente :", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 47, 8
-  CONTROL "Tipo de Iva:", 504, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 43, 23, 47, 8
+  CONTROL "Impuesto :", 504, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 43, 23, 47, 8
 }
 
 SECCION DIALOG DISCARDABLE 162, 63, 191, 56
@@ -17895,10 +17895,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "Fecha\r\n", -1, "Static", WS_GROUP, 44, 58, 45, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 444, 57, 29, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 444, 69, 29, 8
-  CONTROL "", 601, "TBtnBmp", 0x00000000, 44, 103, 12, 12
-  CONTROL "", 602, "TBtnBmp", 0x00000000, 57, 103, 12, 12
-  CONTROL "", 603, "TBtnBmp", 0x00000000, 70, 103, 12, 12
+  CONTROL "", 601, "TBtnBmp", 0x00000000, 44, 102, 12, 12
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 57, 102, 12, 12
+  CONTROL "", 603, "TBtnBmp", 0x00000000, 70, 102, 12, 12
   CONTROL "", 151, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 103, 86, 11
+  CONTROL "", 152, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 103, 86, 11
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
