--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17781,47 +17781,47 @@ ALBCLI_1 DIALOG DISCARDABLE 73, -6, 670, 375
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 237, 30, 113, 11
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 237, 42, 203, 11
-  CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 237, 54, 113, 11
-  CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 237, 66, 203, 11
-  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 237, 78, 73, 11
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 312, 78, 128, 11
-  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 237, 90, 113, 11
-  CONTROL "", 106, "Edit", WS_BORDER, 388, 90, 52, 11
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 237, 103, 73, 11
-  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 312, 103, 128, 11
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 237, 115, 73, 11
-  CONTROL "", 201, "Edit", WS_BORDER|WS_TABSTOP, 312, 115, 128, 11
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 483, 30, 65, 11
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 550, 30, 113, 11
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 483, 42, 65, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 483, 54, 180, 11
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 483, 66, 32, 11
-  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 516, 66, 32, 11
-  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 550, 66, 26, 11
-  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 577, 66, 86, 11
-  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 550, 42, 113, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 483, 78, 65, 11
-  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 550, 78, 113, 11
-  CONTROL "", 222, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 483, 90, 65, 11
-  CONTROL "Agente", 223, "Edit", ES_RIGHT|WS_BORDER, 550, 90, 113, 11
-  CONTROL "", 225, "Edit", WS_BORDER|WS_TABSTOP, 483, 102, 65, 11
-  CONTROL "", 226, "Edit", WS_BORDER|WS_TABSTOP, 550, 102, 113, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 483, 114, 47, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 240, 30, 113, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 240, 42, 203, 11
+  CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 240, 54, 113, 11
+  CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 240, 66, 203, 11
+  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 240, 78, 73, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 315, 78, 128, 11
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 240, 90, 113, 11
+  CONTROL "", 106, "Edit", WS_BORDER, 391, 90, 52, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 240, 103, 73, 11
+  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 315, 103, 128, 11
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 240, 115, 73, 11
+  CONTROL "", 201, "Edit", WS_BORDER|WS_TABSTOP, 315, 115, 128, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 485, 30, 65, 11
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 552, 30, 113, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 485, 42, 65, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 485, 54, 180, 11
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 485, 66, 32, 11
+  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 518, 66, 32, 11
+  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 552, 66, 26, 11
+  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 579, 66, 86, 11
+  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 552, 42, 113, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 485, 78, 65, 11
+  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 552, 78, 113, 11
+  CONTROL "", 222, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 485, 90, 65, 11
+  CONTROL "Agente", 223, "Edit", ES_RIGHT|WS_BORDER, 552, 90, 113, 11
+  CONTROL "", 225, "Edit", WS_BORDER|WS_TABSTOP, 485, 102, 65, 11
+  CONTROL "", 226, "Edit", WS_BORDER|WS_TABSTOP, 552, 102, 113, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 485, 114, 47, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 129, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 100, 129, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 155, 129, 50, 14
-  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 210, 129, 50, 14
-  CONTROL "Lin. T&otal", 515, "Button", WS_TABSTOP, 265, 129, 50, 14
-  CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 320, 129, 50, 14
-  CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 375, 129, 50, 14
-  CONTROL "Ocultar Esc&ll.", 526, "Button", WS_TABSTOP, 430, 129, 50, 14
-  CONTROL "", 240, "TXBrowse", WS_TABSTOP|0x00300000, 45, 145, 619, 139
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 129, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 129, 50, 14
+  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 208, 129, 50, 14
+  CONTROL "Lin. T&otal", 515, "Button", WS_TABSTOP, 263, 129, 50, 14
+  CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 318, 129, 50, 14
+  CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 373, 129, 50, 14
+  CONTROL "Ocultar Esc&ll.", 526, "Button", WS_TABSTOP, 428, 129, 50, 14
+  CONTROL "", 240, "TXBrowse", WS_TABSTOP|0x00300000, 44, 145, 622, 139
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 288, 154, 61
-  CONTROL "", 172, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 388, 30, 52, 11
-  CONTROL "0", 173, "Edit", ES_RIGHT|WS_BORDER, 388, 54, 52, 11
-  CONTROL "", 231, "TBitmap", 0x00800000, 532, 114, 16, 11
+  CONTROL "", 172, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 391, 30, 52, 11
+  CONTROL "0", 173, "Edit", ES_RIGHT|WS_BORDER, 391, 54, 52, 11
+  CONTROL "", 231, "TBitmap", 0x00800000, 534, 114, 16, 11
   CONTROL "", 249, "Edit", WS_BORDER|WS_TABSTOP, 47, 297, 79, 11
   CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 127, 297, 50, 11
   CONTROL "", 259, "Edit", WS_BORDER|WS_TABSTOP, 47, 309, 79, 11
@@ -17830,59 +17830,59 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 280, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 127, 321, 50, 11
   CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 47, 333, 79, 11
   CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 127, 333, 50, 11
-  CONTROL "", 310, "TXBrowse", 0x00200000, 204, 289, 230, 81
-  CONTROL "", 411, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 441, 289, 90, 11
-  CONTROL "", 412, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 533, 289, 49, 11
-  CONTROL "Punto verde", 409, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 441, 329, 82, 9
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 584, 289, 79, 11
-  CONTROL "Recargo equivalencia", 406, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 441, 347, 82, 9
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 43, 26, 11
-  CONTROL "", 110, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 127, 43, 40, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 168, 43, 18, 11
-  CONTROL "", 217, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_NOINTEGRALHEIGHT|WS_TABSTOP, 100, 29, 86, 104
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 55, 86, 11
-  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 67, 86, 11
-  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 79, 86, 11
-  CONTROL "", 140, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 91, 86, 11
-  CONTROL "&G", 512, "Button", WS_TABSTOP, 87, 102, 12, 12
-  CONTROL "", 150, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 103, 86, 11
-  CONTROL "Imp. inc.", 165, "Button", BS_AUTOCHECKBOX, 44, 116, 45, 10
-  CONTROL "", 160, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 115, 86, 11
+  CONTROL "", 310, "TXBrowse", 0x00200000, 202, 289, 235, 81
+  CONTROL "", 411, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 443, 289, 90, 11
+  CONTROL "", 412, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 535, 289, 49, 11
+  CONTROL "Punto verde", 409, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 443, 329, 82, 9
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 586, 289, 79, 11
+  CONTROL "Recargo equivalencia", 406, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 443, 347, 82, 9
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 102, 43, 26, 11
+  CONTROL "", 110, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 130, 43, 40, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 171, 43, 18, 11
+  CONTROL "", 217, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_NOINTEGRALHEIGHT|WS_TABSTOP, 103, 29, 86, 104
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 55, 86, 11
+  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 67, 86, 11
+  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 79, 86, 11
+  CONTROL "", 140, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 91, 86, 11
+  CONTROL "&P", 512, "Button", WS_TABSTOP, 79, 102, 12, 12
+  CONTROL "", 150, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 86, 11
+  CONTROL "Imp. incluido", 165, "Button", BS_AUTOCHECKBOX, 44, 116, 53, 10
+  CONTROL "", 160, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 115, 86, 11
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER, 93, 356, 98, 11
-  CONTROL "", 115, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 100, 91, 86, 11
-  CONTROL "0", 401, "Static", SS_RIGHT|WS_GROUP, 583, 302, 80, 8
-  CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 583, 320, 80, 8
-  CONTROL "0", 405, "Static", SS_RIGHT|WS_GROUP, 583, 338, 80, 8
-  CONTROL "0", 407, "Static", SS_RIGHT|WS_GROUP, 583, 347, 80, 8
-  CONTROL "0", 360, "Static", SS_RIGHT|WS_GROUP, 534, 356, 129, 16
+  CONTROL "", 115, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 103, 91, 86, 11
+  CONTROL "0", 401, "Static", SS_RIGHT|WS_GROUP, 585, 302, 80, 8
+  CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 585, 320, 80, 8
+  CONTROL "0", 405, "Static", SS_RIGHT|WS_GROUP, 585, 338, 80, 8
+  CONTROL "0", 407, "Static", SS_RIGHT|WS_GROUP, 585, 347, 80, 8
+  CONTROL "0", 360, "Static", SS_RIGHT|WS_GROUP, 536, 356, 129, 16
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 46, 40, 8
   CONTROL "Su albarán", 141, "Static", WS_GROUP, 44, 94, 36, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 444, 117, 23, 8
-  CONTROL "Cliente", -1, "Static", WS_GROUP, 189, 33, 46, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 189, 45, 46, 8
-  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 189, 57, 46, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 189, 69, 46, 8
-  CONTROL "CP/Población", -1, "Static", WS_GROUP, 189, 81, 46, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 189, 93, 46, 8
-  CONTROL "Riesgo", -1, "Static", WS_GROUP, 352, 57, 27, 8
-  CONTROL "Precio", -1, "Static", WS_GROUP, 352, 33, 23, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 352, 93, 33, 8
-  CONTROL "Tarifa pers.", -1, "Static", WS_GROUP, 444, 33, 38, 8
-  CONTROL "Dirección", -1, "Static", WS_GROUP, 189, 106, 46, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 189, 118, 46, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 444, 45, 38, 8
-  CONTROL "Agente", -1, "Static", WS_GROUP, 444, 81, 38, 8
-  CONTROL "%Com.", -1, "Static", WS_GROUP, 444, 93, 38, 8
-  CONTROL "Ruta", -1, "Static", WS_GROUP, 444, 105, 38, 8
-  CONTROL "Neto", 708, "Static", WS_GROUP, 441, 302, 18, 8
-  CONTROL "Margen", 709, "Static", WS_GROUP, 47, 359, 24, 8
-  CONTROL "I.V.H.M.", 710, "Static", WS_GROUP, 441, 320, 27, 8
-  CONTROL "Impuestos", 711, "Static", WS_GROUP, 441, 338, 41, 8
-  CONTROL "", 488, "Static", WS_GROUP, 443, 358, 27, 15
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 446, 117, 23, 8
+  CONTROL "Cliente", -1, "Static", WS_GROUP, 192, 33, 46, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 192, 45, 46, 8
+  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 192, 57, 46, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 192, 69, 46, 8
+  CONTROL "CP/Población", -1, "Static", WS_GROUP, 192, 81, 46, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 192, 93, 46, 8
+  CONTROL "Riesgo", -1, "Static", WS_GROUP, 355, 57, 27, 8
+  CONTROL "Precio", -1, "Static", WS_GROUP, 355, 33, 23, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 355, 93, 33, 8
+  CONTROL "Tarifa pers.", -1, "Static", WS_GROUP, 446, 33, 38, 8
+  CONTROL "Dirección", -1, "Static", WS_GROUP, 192, 106, 46, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 192, 118, 46, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 446, 45, 38, 8
+  CONTROL "Agente", -1, "Static", WS_GROUP, 446, 81, 38, 8
+  CONTROL "%Com.", -1, "Static", WS_GROUP, 446, 93, 38, 8
+  CONTROL "Ruta", -1, "Static", WS_GROUP, 446, 105, 38, 8
+  CONTROL "Neto", 708, "Static", WS_GROUP, 443, 302, 18, 8
+  CONTROL "Margen", 709, "Static", WS_GROUP, 45, 359, 24, 8
+  CONTROL "I.V.H.M.", 710, "Static", WS_GROUP, 443, 320, 27, 8
+  CONTROL "Impuestos", 711, "Static", WS_GROUP, 443, 338, 41, 8
+  CONTROL "", 488, "Static", WS_GROUP, 445, 358, 27, 15
   CONTROL "", -1, "Button", BS_GROUPBOX, 43, 349, 155, 23
-  CONTROL "Transporte", 712, "Static", WS_GROUP, 441, 311, 39, 8
-  CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 583, 311, 80, 8
-  CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 583, 329, 80, 8
+  CONTROL "Transporte", 712, "Static", WS_GROUP, 443, 311, 39, 8
+  CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 585, 311, 80, 8
+  CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 585, 329, 80, 8
   CONTROL "Fecha salida", 112, "Static", WS_GROUP, 44, 70, 45, 8
   CONTROL "Fecha entrada", 114, "Static", WS_GROUP, 44, 82, 51, 8
   CONTROL "Dias", 116, "Static", WS_GROUP, 44, 94, 17, 8
@@ -17893,13 +17893,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Albaranes clientes", -1, "Static", WS_GROUP, 44, 3, 120, 8
   CONTROL "Fecha\r\n", -1, "Static", WS_GROUP, 44, 58, 45, 8
-  CONTROL "Banco", -1, "Static", WS_GROUP, 444, 57, 29, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 444, 69, 29, 8
+  CONTROL "Banco", -1, "Static", WS_GROUP, 446, 57, 29, 8
+  CONTROL "Cuenta", -1, "Static", WS_GROUP, 446, 69, 29, 8
   CONTROL "", 601, "TBtnBmp", 0x00000000, 44, 102, 12, 12
-  CONTROL "", 602, "TBtnBmp", 0x00000000, 57, 102, 12, 12
-  CONTROL "", 603, "TBtnBmp", 0x00000000, 70, 102, 12, 12
-  CONTROL "", 151, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 103, 86, 11
-  CONTROL "", 152, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 103, 86, 11
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 56, 102, 12, 12
+  CONTROL "", 603, "TBtnBmp", 0x00000000, 68, 102, 12, 12
+  CONTROL "", 151, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 86, 11
+  CONTROL "", 152, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 86, 11
+  CONTROL "&S", 513, "Button", WS_TABSTOP, 91, 102, 12, 12
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
