--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -47,3 +47,4 @@ lock_32_alpha BITMAP "..\\bmp\\lock_32_alpha.bmp"
 piggy_bank_32_alpha BITMAP "..\\bmp\\piggy_bank_32_alpha.bmp"
 power-drill_user1_16 BITMAP "..\\bmp\\power-drill_user1_16.bmp"
 power-drill_user1_32 BITMAP "..\\bmp\\power-drill_user1_32.bmp"
+logogestool_48 BITMAP "..\\bmp\\logogestool_48.bmp"
