--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19041,3 +19041,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "Averia", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 30, 616, 70
 }
 
+WAIT_WEB DIALOG DISCARDABLE 119, 36, 180, 29
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Espere por favor..."
+FONT 12, "Segoe UI"
+{
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 25
+  CONTROL "Actualizando web espere por favor...", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 39, 18, 137, 8
+}
