--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -414,7 +414,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 140, "TXBrowse", WS_TABSTOP|0x00a00000, 48, 56, 546, 257
   CONTROL "Artículos por contadores", -1, "Button", BS_GROUPBOX, 44, 30, 555, 287
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Apunte de agenda", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "Artículos por contadores", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
 
 ARQUEO_3 DIALOG DISCARDABLE -47, 69, 605, 318
@@ -455,7 +455,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 411, "Static", SS_RIGHT|WS_GROUP, 119, 291, 60, 8
   CONTROL "No efectivo", -1, "Static", WS_GROUP, 50, 291, 48, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Apunte de agenda", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "Arqueo de caja", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
 
 APTURNO DIALOG DISCARDABLE 31, 110, 410, 206
