--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2838,6 +2838,9 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Publicar este artículo en la página web", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 29, 141, 10
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 28, 70, 11
+  CONTROL "Sobre precio", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 54, 54, 10
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 106, 53, 40, 11
   CONTROL "0", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 106, 66, 56, 11
   CONTROL "", 121, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 215, 66, 40, 11
   CONTROL "", 122, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 285, 66, 57, 11
@@ -2848,6 +2851,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 183, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 141, 119, 30, 11
   CONTROL "", 184, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 179, 119, 30, 11
   CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 345, 93, 30, 11
+  CONTROL "", 220, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 147, 440, 133
   CONTROL "dias", -1, "Static", WS_GROUP, 213, 121, 16, 9
   CONTROL "Caracteristicas técnicas", -1, "Button", BS_GROUPBOX, 44, 136, 448, 147
   CONTROL "Meses de garantía", -1, "Static", WS_GROUP, 262, 96, 72, 8
@@ -2855,7 +2859,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Button", BS_GROUPBOX, 255, 85, 237, 48
   CONTROL "Entregas", -1, "Button", BS_GROUPBOX, 44, 85, 207, 48
   CONTROL "Ofertas para la web", -1, "Button", BS_GROUPBOX, 44, 42, 447, 41
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 416, 28, 70, 11
   CONTROL "Código web", -1, "Static", WS_GROUP, 351, 31, 40, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 3, 4, 34, 30
   CONTROL "Configuración para el artículo en la web", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
@@ -2863,9 +2866,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "% Descuento", -1, "Static", WS_GROUP, 166, 69, 47, 8
   CONTROL "Neto", -1, "Static", WS_GROUP, 262, 69, 21, 8
   CONTROL "Impuestos incluidos", -1, "Static", WS_GROUP, 351, 69, 64, 8
-  CONTROL "Sobre precio", -1, "Static", WS_GROUP, 48, 55, 45, 8
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 106, 53, 40, 11
-  CONTROL "", 220, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|ES_WANTRETURN|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 147, 440, 133
 }
 
 CHGFIELDS DIALOG DISCARDABLE 72, 79, 362, 197
@@ -12162,11 +12162,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Opciones de sincronización", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 4, 97, 413, 111
   CONTROL "Sincronización total", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 21, 121, 75, 10
   CONTROL "IVA", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 21, 133, 25, 10
-  CONTROL "Familias", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 21, 145, 38, 10
-  CONTROL "Artículos", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 21, 157, 40, 10
-  CONTROL "Fabricantes", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 21, 169, 50, 10
-  CONTROL "Recepción de pedidos", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 21, 181, 85, 10
-  CONTROL "Clientes", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 137, 121, 40, 10
+  CONTROL "Artículos", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 21, 144, 40, 10
+  CONTROL "Recepción de pedidos", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 21, 166, 85, 10
+  CONTROL "Clientes", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 21, 155, 40, 10
   CONTROL "Servidor:", -1, "Static", WS_GROUP, 9, 24, 80, 8
   CONTROL "Puerto:", -1, "Static", WS_GROUP, 9, 36, 80, 8
   CONTROL "Nombre de usuario:", -1, "Static", WS_GROUP, 9, 48, 80, 8
@@ -12182,7 +12180,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Plataforma", -1, "Static", WS_GROUP, 9, 12, 80, 8
   CONTROL "", 220, "Static", WS_BORDER|WS_GROUP, 91, 10, 322, 10
   CONTROL "Exportar datos", 121, "Button", BS_AUTORADIOBUTTON, 9, 108, 60, 12
-  CONTROL "Importar datos", 122, "Button", BS_AUTORADIOBUTTON, 9, 192, 60, 12
+  CONTROL "Importar datos", 122, "Button", BS_AUTORADIOBUTTON, 9, 177, 60, 12
 }
 
 COMERCIO_2 DIALOG DISCARDABLE 113, 78, 425, 211
@@ -19049,3 +19047,4 @@ FONT 12, "Segoe UI"
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 25
   CONTROL "Actualizando web espere por favor...", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 39, 18, 137, 8
 }
+
