--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18862,6 +18862,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 386, 1
   CONTROL "", 200, "msctls_progress32", 0x00000000, 4, 56, 378, 4
   CONTROL "", 210, "msctls_progress32", 0x00000000, 4, 78, 378, 4
+  CONTROL "Sincroniza información", 102, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 88, 84, 10
+  CONTROL "", 220, "msctls_progress32", 0x00000000, 4, 100, 378, 4
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
